// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/file/* should correctly render icon 1`] = `
<IconFileBase
  baseClassName="icon-file-audio"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#955ca5"
  />
  <path
    d="M19 20.1V17h-6v4.5a1.5 1.5 0 1 1-1.5-1.5.9.9 0 0 1 .5.1V13h8v8.5a1.5 1.5 0 1 1-1.5-1.5.9.9 0 0 1 .5.1zM13 16h6v-2h-6z"
    fill="#955ca5"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 2`] = `
<IconFileBase
  baseClassName="icon-file-box-note"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#0061d5"
  />
  <path
    d="M18.85 14.5H10.1a.75.75 0 0 0 0 1.5h7.7z"
    fill="#980de0"
  />
  <path
    d="M16.7 17.5h-6.6a.76.76 0 0 0 0 1.52h5.59z"
    fill="#0061d5"
  />
  <path
    d="M14.7 20.5h-4.6a.75.75 0 0 0 0 1.5H14l.05-.25c.05-.15.05-.4.15-.5z"
    fill="#00c9c1"
  />
  <path
    d="M19.7 14.95a2.57 2.57 0 0 0 .6.6 2.17 2.17 0 0 0 .75.35l-4.6 6.45-.3.3-1.55 1.15c-.1.1-.2 0-.15-.1l.45-1.9a1.5 1.5 0 0 1 .2-.4zm1-1.5a1 1 0 0 1 1.25.9 6.38 6.38 0 0 1-.5.85 4.86 4.86 0 0 1-.75-.3 1.7 1.7 0 0 1-.65-.65z"
    fill="#000123"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 3`] = `
<IconFileBase
  baseClassName="icon-file-code"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 19h1v1h-1zM20 13h-3v1h2v3h1v-4zM19 23h-2v1h3v-4h-1v3zM21 18h1v1h-1zM20 17h1v1h-1zM11 24h3v-1h-2v-3h-1v4zM10 19h1v1h-1zM10 17h1v1h-1zM9 18h1v1H9zM12 14h2v-1h-3v4h1v-3z"
    fill="#e33d55"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 .88 1H25a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 .88 1H25z"
    fill="#e33d55"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 4`] = `
<IconFileBase
  baseClassName="icon-file-default"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#737f8b"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 5`] = `
<IconFileBase
  baseClassName="icon-file-document"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#2a62b9"
  />
  <path
    d="M10 20h8v1h-8zm0-3h11v1H10zm0-3h11v1H10z"
    fill="#2a62b9"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 6`] = `
<IconFileBase
  baseClassName="icon-file-dwg"
>
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#0696d7"
  />
  <path
    d="M18 17v-2h-2v-4h-1v4h-2v2H9v1h4v2h2v4h1v-4h2v-2h4v-1zm-1 2h-3v-3h3z"
    fill="#0696d7"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 7`] = `
<IconFileBase
  baseClassName="icon-file-excel-spreadsheet"
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#207245"
  />
  <path
    d="M10 13h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3zm-8 3h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3zm-8 3h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3zm-8 3h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3z"
    fill="#207245"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 8`] = `
<IconFileBase
  baseClassName="icon-file-google-docs"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#4083F7"
  />
  <path
    d="M10 15h11v1H10v-1zm0 2h11v1H10v-1zm0 2h11v1H10v-1zm0 2h8v1h-8v-1z"
    fill="#4083F7"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 9`] = `
<IconFileBase
  baseClassName="icon-file-google-sheets"
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#fff"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#21a464"
  />
  <path
    d="M20 13h-9a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-8a1 1 0 0 0-1-1zm-5 9h-4v-2h4zm0-3h-4v-2h4zm0-3h-4v-2h4zm5 6h-4v-2h4zm0-3h-4v-2h4zm0-3h-4v-2h4z"
    fill="#21a464"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 10`] = `
<IconFileBase
  baseClassName="icon-file-google-slides"
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#F7BA00"
  />
  <path
    d="M10 14v9c0 .6.4 1 1 1h9c.6 0 1-.4 1-1v-9c0-.6-.4-1-1-1h-9c-.6 0-1 .4-1 1zm10 7h-9v-5h9v5z"
    fill="#F7BA00"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 11`] = `
<IconFileBase
  baseClassName="icon-file-illustrator"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#f7931d"
  />
  <path
    d="M14 14.85L12.89 18h2.25zm2.16 6l-.68-2h-2.83l-.71 2H11l2.61-7.1h.88l2.61 7.1zM18.99 13.7h.89v7.1h-.89z"
    fill="#f7931d"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 12`] = `
<IconFileBase
  baseClassName="icon-file-image"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#3fb87f"
  />
  <path
    d="M18 17a2 2 0 1 1 2-2 2 2 0 0 1-2 2zm-.6 4.09l-3.12-3.71a.41.41 0 0 0-.58-.06l-.06.06L9 23h13l-2.72-3.6a.35.35 0 0 0-.6 0z"
    fill="#3fb87f"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 13`] = `
<IconFileBase
  baseClassName="icon-file-indesign"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#955ca5"
  />
  <path
    d="M15.64 14.45v5.32h1.44a2.32 2.32 0 0 0 2.44-2.19v-.48-.35a2.34 2.34 0 0 0-2.44-2.3zm-.87-.77h2.36c2 0 3.24 1.27 3.24 3.43s-1.21 3.41-3.24 3.41h-2.35zm-1.92 6.83v-6.83H12v6.83z"
    fill="#955ca5"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 14`] = `
<IconFileBase
  baseClassName="icon-file-keynote"
>
  <path
    d="M25 27H7V5h13l5 5v17"
    fill="#fff"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#157ef8"
  />
  <path
    d="M21.19 18.24a.44.44 0 0 1-.09.12l-.12.09H10a.44.44 0 0 1-.12-.09.51.51 0 0 1-.09-.12.51.51 0 0 1 0-.14v-.6h11.5v.6a.48.48 0 0 1-.1.14zM10 17s.14-2.51.18-3.36v-.4a1.44 1.44 0 0 1 0-.2.65.65 0 0 1 .06-.19.66.66 0 0 1 .12-.16.63.63 0 0 1 .16-.11.65.65 0 0 1 .19-.06h.77v-.56a1.9 1.9 0 0 1 0-.26.83.83 0 0 1 .25-.49.72.72 0 0 1 .2-.13.94.94 0 0 1 .29-.09h1.48a.15.15 0 0 0 .13 0l.16-.22a.48.48 0 0 1 .12-.1l.16-.05h1.38l.16.05a.56.56 0 0 1 .14.1.52.52 0 0 1 .1.14.59.59 0 0 1 .06.16.71.71 0 0 1 0 .16 1 1 0 0 1 0 .23.58.58 0 0 1-.06.16.57.57 0 0 1-.24.24l-.16.06h-1.38a.63.63 0 0 1-.16-.05l-.1-.07-.16-.17a.17.17 0 0 0-.12-.07h-1.55a.35.35 0 0 0-.14.14.32.32 0 0 0 0 .1 1.06 1.06 0 0 0 0 .18v.57h8.27a.65.65 0 0 1 .19.06.65.65 0 0 1 .16.11.62.62 0 0 1 .12.16.65.65 0 0 1 .06.19 1.18 1.18 0 0 1 0 .2v.32c0 .65.18 3.43.18 3.43H10zm3 6.5h2V19h1v4.5h2a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1z"
    fill="#157ef8"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 15`] = `
<IconFileBase
  baseClassName="icon-file-numbers"
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#2ABB80"
  />
  <path
    d="M21.5 23.5h-12c-.3 0-.5-.2-.5-.5s.2-.5.5-.5h12c.3 0 .5.2.5.5s-.2.5-.5.5zm0-2H20c-.3 0-.5-.2-.5-.5v-6c0-.3.2-.5.5-.5h1.5c.3 0 .5.2.5.5v6c0 .3-.2.5-.5.5zm-3.5 0h-1.5c-.3 0-.5-.2-.5-.5v-8.5c0-.3.2-.4.5-.4H18c.3 0 .5.1.5.4V21c0 .3-.2.5-.5.5zm-3.5 0H13c-.3 0-.5-.2-.5-.5v-4.5c0-.3.2-.5.5-.5h1.5c.3 0 .5.2.5.5V21c0 .3-.2.5-.5.5zm-3.5 0H9.5c-.3 0-.5-.2-.5-.5v-1.5c0-.3.2-.5.5-.5H11c.3 0 .5.2.5.5V21c0 .3-.2.5-.5.5z"
    fill="#2ABB80"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 16`] = `
<IconFileBase
  baseClassName="icon-file-pages"
>
  <path
    d="M7 26.5v-21a.47.47 0 0 1 .5-.5H20v4a.94.94 0 0 0 1 1h4v12H10.5a.5.5 0 0 0 0 1H25v3.5a.47.47 0 0 1-.5.5h-17a.47.47 0 0 1-.5-.5z"
    fill="#fff"
  />
  <path
    d="M25 26.5V23H10.5a.5.5 0 0 1 0-1H25V10h-4a.94.94 0 0 1-1-1V5H7.5a.47.47 0 0 0-.5.5v21a.47.47 0 0 0 .5.5h17a.47.47 0 0 0 .5-.5zm1-16.6v16.6a1.54 1.54 0 0 1-1.5 1.5h-17A1.54 1.54 0 0 1 6 26.5v-21A1.54 1.54 0 0 1 7.5 4h12.6z"
    fill="#f49d31"
  />
  <path
    d="M20.3 11l-1 1 .8.8 1-1a.57.57 0 0 0-.8-.8zm-9.7 10.3c-.1.1.1.3.2.2l.8-.5-.5-.5zm8.5-9.1L12 19.3a3.85 3.85 0 0 0-.8 1.1l.5.5a4.44 4.44 0 0 0 1.1-.8l7.1-7.1z"
    fill="#f49d31"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 17`] = `
<IconFileBase
  baseClassName="icon-file-pdf"
>
  <path
    d="M25 27H7V5h13l5 5v17"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#e33d55"
  />
  <path
    d="M21.53 20.17a2 2 0 0 0-1.76-.93 10 10 0 0 0-1.54.11 4.77 4.77 0 0 0 3.13.81 1 1 0 0 1-.84.86 2.4 2.4 0 0 1-1.52-.21 17.59 17.59 0 0 1-1.73-1 .55.55 0 0 0-.54-.09l-2.58.93a.85.85 0 0 0-.37.3c-1.29 1.95-2.44 3-2.93 3.06s-1.13-.18-.86-1.37 1.23-1.49 2.29-1.74c-1.08.8-1.5 1.42-1.41 2.1a.83.83 0 0 0 .13-.14 24.24 24.24 0 0 0 3.8-5.45.4.4 0 0 0 0-.41 6.94 6.94 0 0 1-.9-3.66c.26-2.53 2.55-1.55 2 .38a1.87 1.87 0 0 0-.51-1.1c-.29-.22-.54-.12-.59.23a5.77 5.77 0 0 0 .51 3.35 5.46 5.46 0 0 0 .46-2.2.9.9 0 0 1 .52.62 2.8 2.8 0 0 1-.08 1.62c-.08.28-.2.56-.28.84a.34.34 0 0 0 0 .27c.37.42.75.82 1.15 1.22a.36.36 0 0 0 .3 0 7.22 7.22 0 0 1 2.11-.44 1.82 1.82 0 0 1 2 1.62zm-6-2.12l-1 1.84 1.9-.88z"
    fill="#e33d55"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 18`] = `
<IconFileBase
  baseClassName="icon-file-photoshop"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#22a7f0"
  />
  <path
    d="M10.79 14.85v2.67h1.4a1.25 1.25 0 0 0 1.42-1.32 1.25 1.25 0 0 0-1.42-1.35zm-.79-.7h2.4a2 2 0 0 1 2 2v.05a2 2 0 0 1-2 2h-1.61v2.26H10zM15.88 18.83a2.09 2.09 0 0 0 2.33 1.81c1.45 0 2.37-.74 2.37-1.91 0-.93-.53-1.44-1.84-1.77l-.66-.18c-.87-.22-1.22-.51-1.22-1a1.29 1.29 0 0 1 1.4-1.06 1.3 1.3 0 0 1 1.44 1h.8A2 2 0 0 0 18.31 14c-1.34 0-2.24.73-2.24 1.81 0 .9.5 1.42 1.64 1.71l.81.21c.87.22 1.27.56 1.27 1.1a1.36 1.36 0 0 1-1.48 1.09 1.49 1.49 0 0 1-1.63-1.09z"
    fill="#22a7f0"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 19`] = `
<IconFileBase
  baseClassName="icon-file-powerpoint-presentation"
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#B84729"
  />
  <path
    d="M10 20h11v1H10zm0 2h11v1H10zm5-9c-1.7 0-3 1.3-3 3s1.3 3 3 3 3-1.3 3-3h-3v-3z"
    fill="#B84729"
  />
  <path
    d="M16 12v3h3c0-1.7-1.3-3-3-3z"
    fill="#B84729"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 20`] = `
<IconFileBase
  baseClassName="icon-file-presentation"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#f7931d"
  />
  <path
    d="M10.35 22.41l-.7-.71 4.88-4.86 2.49 2.47 4.63-4.61.7.71-5.33 5.32-2.49-2.48-4.18 4.16z"
    fill="#f7931d"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 21`] = `
<IconFileBase
  baseClassName="icon-file-spreadsheet"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#3fb87f"
  />
  <path
    d="M21 13H11a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1v-8a1 1 0 0 0-1-1zm-10 1h3v2h-3zm0 3h3v2h-3zm0 5v-2h3v2zm10 0h-6v-2h6zm0-3h-6v-2h6zm-6-3v-2h6v2z"
    fill="#3fb87f"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 22`] = `
<IconFileBase
  baseClassName="icon-file-text"
>
  <path
    clipRule="evenodd"
    d="M24.5,27.5h-17c-0.6,0-1-0.4-1-1v-21c0-0.6,0.4-1,1-1h12l6,6v16 C25.5,27.1,25.1,27.5,24.5,27.5z"
    fill="#3464AF"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M24,26.5H8c-0.3,0-0.5-0.2-0.5-0.5V6c0-0.3,0.2-0.5,0.5-0.5h11.5 l5,5V26C24.5,26.3,24.3,26.5,24,26.5z"
    fill="#FFFFFF"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M19.5,4.5l6,6h-5c-0.6,0-1-0.4-1-1V4.5z"
    fill="#3464AF"
    fillRule="evenodd"
  />
  <rect
    clipRule="evenodd"
    fill="#3464AF"
    fillRule="evenodd"
    height="1"
    width="11"
    x="10.5"
    y="14.5"
  />
  <rect
    clipRule="evenodd"
    fill="#3464AF"
    fillRule="evenodd"
    height="1"
    width="11"
    x="10.5"
    y="17.5"
  />
  <rect
    clipRule="evenodd"
    fill="#3464AF"
    fillRule="evenodd"
    height="1"
    width="8"
    x="10.5"
    y="20.5"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 23`] = `
<IconFileBase
  baseClassName="icon-file-three-d"
>
  <path
    clipRule="evenodd"
    d="M24.5,27.5h-17c-0.6,0-1-0.4-1-1v-21c0-0.6,0.4-1,1-1h12l6,6v16 C25.5,27.1,25.1,27.5,24.5,27.5z"
    fill="#F79420"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M24,26.5H8c-0.3,0-0.5-0.2-0.5-0.5V6c0-0.3,0.2-0.5,0.5-0.5h11.5 l5,5V26C24.5,26.3,24.3,26.5,24,26.5z"
    fill="#FFFFFF"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M19.5,4.5l6,6h-5c-0.6,0-1-0.4-1-1V4.5z"
    fill="#F79420"
    fillRule="evenodd"
  />
  <path
    d="M20.5,13.9L16.9,12c-0.5-0.3-1.3-0.3-1.8,0l-3.6,1.9c-0.6,0.3-1,1-1,1.6v4.9c0,0.7,0.4,1.3,1,1.6l3.6,1.9 c0.3,0.1,0.6,0.2,0.9,0.2c0.3,0,0.6-0.1,0.9-0.2l3.6-1.9c0.6-0.3,1-1,1-1.6v-4.9C21.5,14.9,21.1,14.2,20.5,13.9z M11.9,21.2 c-0.2-0.1-0.4-0.5-0.4-0.7v-4.9c0-0.3,0.2-0.6,0.4-0.7l3.6-1.9c0.2-0.1,0.6-0.1,0.9,0l3.6,1.9c0.1,0,0.1,0.1,0.2,0.2L16,17v6.2 c-0.2,0-0.3,0-0.4-0.1L11.9,21.2z"
    fill="#F69322"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 24`] = `
<IconFileBase
  baseClassName="icon-file-vector"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#f8931d"
  />
  <path
    d="M20.34 20.25a5 5 0 0 0-9.68 0 1 1 0 1 1-1-.19 6 6 0 0 1 11.65 0 1 1 0 1 1-1 .19z"
    fill="#f7931d"
  />
  <circle
    cx="15.5"
    cy="15.5"
    fill="#fff"
    r="2.79"
  />
  <path
    d="M15.5 16.5a1 1 0 1 0-1-1 1 1 0 0 0 1 1zm0 1a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
    fill="#f8931d"
  />
  <path
    d="M17 15h5v1h-5zM9 15h5v1H9z"
    fill="#f8931d"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 25`] = `
<IconFileBase
  baseClassName="icon-file-video"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#22a7f0"
  />
  <path
    d="M12.43 21.8c-.24.13-.43 0-.43-.27v-8c0-.28.2-.4.43-.27l7.14 4a.25.25 0 0 1 0 .48z"
    fill="#22a7f0"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 26`] = `
<IconFileBase
  baseClassName="icon-file-word-document"
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#2A5696"
  />
  <path
    d="M10 13h11v1H10zm0 2h11v1H10zm0 2h11v1H10zm0 2h11v1H10zm0 2h11v1H10z"
    fill="#2A5696"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon 27`] = `
<IconFileBase
  baseClassName="icon-file-zip"
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M11 25h1v1h-1zM11 23h1v1h-1zM11 21h1v1h-1zM11 19h1v1h-1zM11 17h1v1h-1zM11 15h1v1h-1zM11 13h1v1h-1zM11 11h1v1h-1zM11 9h1v1h-1zM11 7h1v1h-1zM11 5h1v1h-1zM12 24h1v1h-1zM12 22h1v1h-1zM12 20h1v1h-1zM12 18h1v1h-1zM12 16h1v1h-1zM12 14h1v1h-1zM12 12h1v1h-1zM12 10h1v1h-1zM12 8h1v1h-1zM12 6h1v1h-1z"
    fill="#737f8b"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#737f8b"
  />
  <path
    d="M12 26h1v1h-1z"
    fill="#737f8b"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 1`] = `
<IconFileBase
  baseClassName="icon-file-audio"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#955ca5"
  />
  <path
    d="M19 20.1V17h-6v4.5a1.5 1.5 0 1 1-1.5-1.5.9.9 0 0 1 .5.1V13h8v8.5a1.5 1.5 0 1 1-1.5-1.5.9.9 0 0 1 .5.1zM13 16h6v-2h-6z"
    fill="#955ca5"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 2`] = `
<IconFileBase
  baseClassName="icon-file-box-note"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#0061d5"
  />
  <path
    d="M18.85 14.5H10.1a.75.75 0 0 0 0 1.5h7.7z"
    fill="#980de0"
  />
  <path
    d="M16.7 17.5h-6.6a.76.76 0 0 0 0 1.52h5.59z"
    fill="#0061d5"
  />
  <path
    d="M14.7 20.5h-4.6a.75.75 0 0 0 0 1.5H14l.05-.25c.05-.15.05-.4.15-.5z"
    fill="#00c9c1"
  />
  <path
    d="M19.7 14.95a2.57 2.57 0 0 0 .6.6 2.17 2.17 0 0 0 .75.35l-4.6 6.45-.3.3-1.55 1.15c-.1.1-.2 0-.15-.1l.45-1.9a1.5 1.5 0 0 1 .2-.4zm1-1.5a1 1 0 0 1 1.25.9 6.38 6.38 0 0 1-.5.85 4.86 4.86 0 0 1-.75-.3 1.7 1.7 0 0 1-.65-.65z"
    fill="#000123"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 3`] = `
<IconFileBase
  baseClassName="icon-file-code"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 19h1v1h-1zM20 13h-3v1h2v3h1v-4zM19 23h-2v1h3v-4h-1v3zM21 18h1v1h-1zM20 17h1v1h-1zM11 24h3v-1h-2v-3h-1v4zM10 19h1v1h-1zM10 17h1v1h-1zM9 18h1v1H9zM12 14h2v-1h-3v4h1v-3z"
    fill="#e33d55"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 .88 1H25a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 .88 1H25z"
    fill="#e33d55"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 4`] = `
<IconFileBase
  baseClassName="icon-file-default"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#737f8b"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 5`] = `
<IconFileBase
  baseClassName="icon-file-document"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#2a62b9"
  />
  <path
    d="M10 20h8v1h-8zm0-3h11v1H10zm0-3h11v1H10z"
    fill="#2a62b9"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 6`] = `
<IconFileBase
  baseClassName="icon-file-dwg"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#0696d7"
  />
  <path
    d="M18 17v-2h-2v-4h-1v4h-2v2H9v1h4v2h2v4h1v-4h2v-2h4v-1zm-1 2h-3v-3h3z"
    fill="#0696d7"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 7`] = `
<IconFileBase
  baseClassName="icon-file-excel-spreadsheet"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#207245"
  />
  <path
    d="M10 13h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3zm-8 3h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3zm-8 3h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3zm-8 3h3v2h-3zm4 0h3v2h-3zm4 0h3v2h-3z"
    fill="#207245"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 8`] = `
<IconFileBase
  baseClassName="icon-file-google-docs"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#4083F7"
  />
  <path
    d="M10 15h11v1H10v-1zm0 2h11v1H10v-1zm0 2h11v1H10v-1zm0 2h8v1h-8v-1z"
    fill="#4083F7"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 9`] = `
<IconFileBase
  baseClassName="icon-file-google-sheets"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#fff"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#21a464"
  />
  <path
    d="M20 13h-9a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-8a1 1 0 0 0-1-1zm-5 9h-4v-2h4zm0-3h-4v-2h4zm0-3h-4v-2h4zm5 6h-4v-2h4zm0-3h-4v-2h4zm0-3h-4v-2h4z"
    fill="#21a464"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 10`] = `
<IconFileBase
  baseClassName="icon-file-google-slides"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#F7BA00"
  />
  <path
    d="M10 14v9c0 .6.4 1 1 1h9c.6 0 1-.4 1-1v-9c0-.6-.4-1-1-1h-9c-.6 0-1 .4-1 1zm10 7h-9v-5h9v5z"
    fill="#F7BA00"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 11`] = `
<IconFileBase
  baseClassName="icon-file-illustrator"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#f7931d"
  />
  <path
    d="M14 14.85L12.89 18h2.25zm2.16 6l-.68-2h-2.83l-.71 2H11l2.61-7.1h.88l2.61 7.1zM18.99 13.7h.89v7.1h-.89z"
    fill="#f7931d"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 12`] = `
<IconFileBase
  baseClassName="icon-file-image"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#3fb87f"
  />
  <path
    d="M18 17a2 2 0 1 1 2-2 2 2 0 0 1-2 2zm-.6 4.09l-3.12-3.71a.41.41 0 0 0-.58-.06l-.06.06L9 23h13l-2.72-3.6a.35.35 0 0 0-.6 0z"
    fill="#3fb87f"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 13`] = `
<IconFileBase
  baseClassName="icon-file-indesign"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#955ca5"
  />
  <path
    d="M15.64 14.45v5.32h1.44a2.32 2.32 0 0 0 2.44-2.19v-.48-.35a2.34 2.34 0 0 0-2.44-2.3zm-.87-.77h2.36c2 0 3.24 1.27 3.24 3.43s-1.21 3.41-3.24 3.41h-2.35zm-1.92 6.83v-6.83H12v6.83z"
    fill="#955ca5"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 14`] = `
<IconFileBase
  baseClassName="icon-file-keynote"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17"
    fill="#fff"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#157ef8"
  />
  <path
    d="M21.19 18.24a.44.44 0 0 1-.09.12l-.12.09H10a.44.44 0 0 1-.12-.09.51.51 0 0 1-.09-.12.51.51 0 0 1 0-.14v-.6h11.5v.6a.48.48 0 0 1-.1.14zM10 17s.14-2.51.18-3.36v-.4a1.44 1.44 0 0 1 0-.2.65.65 0 0 1 .06-.19.66.66 0 0 1 .12-.16.63.63 0 0 1 .16-.11.65.65 0 0 1 .19-.06h.77v-.56a1.9 1.9 0 0 1 0-.26.83.83 0 0 1 .25-.49.72.72 0 0 1 .2-.13.94.94 0 0 1 .29-.09h1.48a.15.15 0 0 0 .13 0l.16-.22a.48.48 0 0 1 .12-.1l.16-.05h1.38l.16.05a.56.56 0 0 1 .14.1.52.52 0 0 1 .1.14.59.59 0 0 1 .06.16.71.71 0 0 1 0 .16 1 1 0 0 1 0 .23.58.58 0 0 1-.06.16.57.57 0 0 1-.24.24l-.16.06h-1.38a.63.63 0 0 1-.16-.05l-.1-.07-.16-.17a.17.17 0 0 0-.12-.07h-1.55a.35.35 0 0 0-.14.14.32.32 0 0 0 0 .1 1.06 1.06 0 0 0 0 .18v.57h8.27a.65.65 0 0 1 .19.06.65.65 0 0 1 .16.11.62.62 0 0 1 .12.16.65.65 0 0 1 .06.19 1.18 1.18 0 0 1 0 .2v.32c0 .65.18 3.43.18 3.43H10zm3 6.5h2V19h1v4.5h2a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1z"
    fill="#157ef8"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 15`] = `
<IconFileBase
  baseClassName="icon-file-numbers"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#2ABB80"
  />
  <path
    d="M21.5 23.5h-12c-.3 0-.5-.2-.5-.5s.2-.5.5-.5h12c.3 0 .5.2.5.5s-.2.5-.5.5zm0-2H20c-.3 0-.5-.2-.5-.5v-6c0-.3.2-.5.5-.5h1.5c.3 0 .5.2.5.5v6c0 .3-.2.5-.5.5zm-3.5 0h-1.5c-.3 0-.5-.2-.5-.5v-8.5c0-.3.2-.4.5-.4H18c.3 0 .5.1.5.4V21c0 .3-.2.5-.5.5zm-3.5 0H13c-.3 0-.5-.2-.5-.5v-4.5c0-.3.2-.5.5-.5h1.5c.3 0 .5.2.5.5V21c0 .3-.2.5-.5.5zm-3.5 0H9.5c-.3 0-.5-.2-.5-.5v-1.5c0-.3.2-.5.5-.5H11c.3 0 .5.2.5.5V21c0 .3-.2.5-.5.5z"
    fill="#2ABB80"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 16`] = `
<IconFileBase
  baseClassName="icon-file-pages"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M7 26.5v-21a.47.47 0 0 1 .5-.5H20v4a.94.94 0 0 0 1 1h4v12H10.5a.5.5 0 0 0 0 1H25v3.5a.47.47 0 0 1-.5.5h-17a.47.47 0 0 1-.5-.5z"
    fill="#fff"
  />
  <path
    d="M25 26.5V23H10.5a.5.5 0 0 1 0-1H25V10h-4a.94.94 0 0 1-1-1V5H7.5a.47.47 0 0 0-.5.5v21a.47.47 0 0 0 .5.5h17a.47.47 0 0 0 .5-.5zm1-16.6v16.6a1.54 1.54 0 0 1-1.5 1.5h-17A1.54 1.54 0 0 1 6 26.5v-21A1.54 1.54 0 0 1 7.5 4h12.6z"
    fill="#f49d31"
  />
  <path
    d="M20.3 11l-1 1 .8.8 1-1a.57.57 0 0 0-.8-.8zm-9.7 10.3c-.1.1.1.3.2.2l.8-.5-.5-.5zm8.5-9.1L12 19.3a3.85 3.85 0 0 0-.8 1.1l.5.5a4.44 4.44 0 0 0 1.1-.8l7.1-7.1z"
    fill="#f49d31"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 17`] = `
<IconFileBase
  baseClassName="icon-file-pdf"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#e33d55"
  />
  <path
    d="M21.53 20.17a2 2 0 0 0-1.76-.93 10 10 0 0 0-1.54.11 4.77 4.77 0 0 0 3.13.81 1 1 0 0 1-.84.86 2.4 2.4 0 0 1-1.52-.21 17.59 17.59 0 0 1-1.73-1 .55.55 0 0 0-.54-.09l-2.58.93a.85.85 0 0 0-.37.3c-1.29 1.95-2.44 3-2.93 3.06s-1.13-.18-.86-1.37 1.23-1.49 2.29-1.74c-1.08.8-1.5 1.42-1.41 2.1a.83.83 0 0 0 .13-.14 24.24 24.24 0 0 0 3.8-5.45.4.4 0 0 0 0-.41 6.94 6.94 0 0 1-.9-3.66c.26-2.53 2.55-1.55 2 .38a1.87 1.87 0 0 0-.51-1.1c-.29-.22-.54-.12-.59.23a5.77 5.77 0 0 0 .51 3.35 5.46 5.46 0 0 0 .46-2.2.9.9 0 0 1 .52.62 2.8 2.8 0 0 1-.08 1.62c-.08.28-.2.56-.28.84a.34.34 0 0 0 0 .27c.37.42.75.82 1.15 1.22a.36.36 0 0 0 .3 0 7.22 7.22 0 0 1 2.11-.44 1.82 1.82 0 0 1 2 1.62zm-6-2.12l-1 1.84 1.9-.88z"
    fill="#e33d55"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 18`] = `
<IconFileBase
  baseClassName="icon-file-photoshop"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#22a7f0"
  />
  <path
    d="M10.79 14.85v2.67h1.4a1.25 1.25 0 0 0 1.42-1.32 1.25 1.25 0 0 0-1.42-1.35zm-.79-.7h2.4a2 2 0 0 1 2 2v.05a2 2 0 0 1-2 2h-1.61v2.26H10zM15.88 18.83a2.09 2.09 0 0 0 2.33 1.81c1.45 0 2.37-.74 2.37-1.91 0-.93-.53-1.44-1.84-1.77l-.66-.18c-.87-.22-1.22-.51-1.22-1a1.29 1.29 0 0 1 1.4-1.06 1.3 1.3 0 0 1 1.44 1h.8A2 2 0 0 0 18.31 14c-1.34 0-2.24.73-2.24 1.81 0 .9.5 1.42 1.64 1.71l.81.21c.87.22 1.27.56 1.27 1.1a1.36 1.36 0 0 1-1.48 1.09 1.49 1.49 0 0 1-1.63-1.09z"
    fill="#22a7f0"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 19`] = `
<IconFileBase
  baseClassName="icon-file-powerpoint-presentation"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#B84729"
  />
  <path
    d="M10 20h11v1H10zm0 2h11v1H10zm5-9c-1.7 0-3 1.3-3 3s1.3 3 3 3 3-1.3 3-3h-3v-3z"
    fill="#B84729"
  />
  <path
    d="M16 12v3h3c0-1.7-1.3-3-3-3z"
    fill="#B84729"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 20`] = `
<IconFileBase
  baseClassName="icon-file-presentation"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#f7931d"
  />
  <path
    d="M10.35 22.41l-.7-.71 4.88-4.86 2.49 2.47 4.63-4.61.7.71-5.33 5.32-2.49-2.48-4.18 4.16z"
    fill="#f7931d"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 21`] = `
<IconFileBase
  baseClassName="icon-file-spreadsheet"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#3fb87f"
  />
  <path
    d="M21 13H11a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1v-8a1 1 0 0 0-1-1zm-10 1h3v2h-3zm0 3h3v2h-3zm0 5v-2h3v2zm10 0h-6v-2h6zm0-3h-6v-2h6zm-6-3v-2h6v2z"
    fill="#3fb87f"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 22`] = `
<IconFileBase
  baseClassName="icon-file-text"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    clipRule="evenodd"
    d="M24.5,27.5h-17c-0.6,0-1-0.4-1-1v-21c0-0.6,0.4-1,1-1h12l6,6v16 C25.5,27.1,25.1,27.5,24.5,27.5z"
    fill="#3464AF"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M24,26.5H8c-0.3,0-0.5-0.2-0.5-0.5V6c0-0.3,0.2-0.5,0.5-0.5h11.5 l5,5V26C24.5,26.3,24.3,26.5,24,26.5z"
    fill="#FFFFFF"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M19.5,4.5l6,6h-5c-0.6,0-1-0.4-1-1V4.5z"
    fill="#3464AF"
    fillRule="evenodd"
  />
  <rect
    clipRule="evenodd"
    fill="#3464AF"
    fillRule="evenodd"
    height="1"
    width="11"
    x="10.5"
    y="14.5"
  />
  <rect
    clipRule="evenodd"
    fill="#3464AF"
    fillRule="evenodd"
    height="1"
    width="11"
    x="10.5"
    y="17.5"
  />
  <rect
    clipRule="evenodd"
    fill="#3464AF"
    fillRule="evenodd"
    height="1"
    width="8"
    x="10.5"
    y="20.5"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 23`] = `
<IconFileBase
  baseClassName="icon-file-three-d"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    clipRule="evenodd"
    d="M24.5,27.5h-17c-0.6,0-1-0.4-1-1v-21c0-0.6,0.4-1,1-1h12l6,6v16 C25.5,27.1,25.1,27.5,24.5,27.5z"
    fill="#F79420"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M24,26.5H8c-0.3,0-0.5-0.2-0.5-0.5V6c0-0.3,0.2-0.5,0.5-0.5h11.5 l5,5V26C24.5,26.3,24.3,26.5,24,26.5z"
    fill="#FFFFFF"
    fillRule="evenodd"
  />
  <path
    clipRule="evenodd"
    d="M19.5,4.5l6,6h-5c-0.6,0-1-0.4-1-1V4.5z"
    fill="#F79420"
    fillRule="evenodd"
  />
  <path
    d="M20.5,13.9L16.9,12c-0.5-0.3-1.3-0.3-1.8,0l-3.6,1.9c-0.6,0.3-1,1-1,1.6v4.9c0,0.7,0.4,1.3,1,1.6l3.6,1.9 c0.3,0.1,0.6,0.2,0.9,0.2c0.3,0,0.6-0.1,0.9-0.2l3.6-1.9c0.6-0.3,1-1,1-1.6v-4.9C21.5,14.9,21.1,14.2,20.5,13.9z M11.9,21.2 c-0.2-0.1-0.4-0.5-0.4-0.7v-4.9c0-0.3,0.2-0.6,0.4-0.7l3.6-1.9c0.2-0.1,0.6-0.1,0.9,0l3.6,1.9c0.1,0,0.1,0.1,0.2,0.2L16,17v6.2 c-0.2,0-0.3,0-0.4-0.1L11.9,21.2z"
    fill="#F69322"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 24`] = `
<IconFileBase
  baseClassName="icon-file-vector"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#f8931d"
  />
  <path
    d="M20.34 20.25a5 5 0 0 0-9.68 0 1 1 0 1 1-1-.19 6 6 0 0 1 11.65 0 1 1 0 1 1-1 .19z"
    fill="#f7931d"
  />
  <circle
    cx="15.5"
    cy="15.5"
    fill="#fff"
    r="2.79"
  />
  <path
    d="M15.5 16.5a1 1 0 1 0-1-1 1 1 0 0 0 1 1zm0 1a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
    fill="#f8931d"
  />
  <path
    d="M17 15h5v1h-5zM9 15h5v1H9z"
    fill="#f8931d"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 25`] = `
<IconFileBase
  baseClassName="icon-file-video"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
    fill="#22a7f0"
  />
  <path
    d="M12.43 21.8c-.24.13-.43 0-.43-.27v-8c0-.28.2-.4.43-.27l7.14 4a.25.25 0 0 1 0 .48z"
    fill="#22a7f0"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 26`] = `
<IconFileBase
  baseClassName="icon-file-word-document"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5z"
    fill="#FFFFFF"
  />
  <path
    d="M20 4H7c-.6 0-1 .4-1 1v22c0 .6.4 1 1 1h18c.6 0 1-.4 1-1V9.9L20 4zm5 23H7V5h13v4c0 .6.4 1 1 1h4v17z"
    fill="#2A5696"
  />
  <path
    d="M10 13h11v1H10zm0 2h11v1H10zm0 2h11v1H10zm0 2h11v1H10zm0 2h11v1H10z"
    fill="#2A5696"
  />
</IconFileBase>
`;

exports[`icons/file/* should correctly render icon with props 27`] = `
<IconFileBase
  baseClassName="icon-file-zip"
  className="test"
  height={42}
  title="cool title"
  width={42}
>
  <path
    d="M25 27H7V5h13l5 5v17z"
    fill="#fff"
  />
  <path
    d="M11 25h1v1h-1zM11 23h1v1h-1zM11 21h1v1h-1zM11 19h1v1h-1zM11 17h1v1h-1zM11 15h1v1h-1zM11 13h1v1h-1zM11 11h1v1h-1zM11 9h1v1h-1zM11 7h1v1h-1zM11 5h1v1h-1zM12 24h1v1h-1zM12 22h1v1h-1zM12 20h1v1h-1zM12 18h1v1h-1zM12 16h1v1h-1zM12 14h1v1h-1zM12 12h1v1h-1zM12 10h1v1h-1zM12 8h1v1h-1zM12 6h1v1h-1z"
    fill="#737f8b"
  />
  <path
    d="M20 4H7a.94.94 0 0 0-1 1v22a.94.94 0 0 0 1 1h18a.94.94 0 0 0 1-1V9.9zm5 23H7V5h13v4a.94.94 0 0 0 1 1h4z"
    fill="#737f8b"
  />
  <path
    d="M12 26h1v1h-1z"
    fill="#737f8b"
  />
</IconFileBase>
`;
